# dbt-metaflow

./: README.md  pyproject.toml
dbt_metaflow/: __main__.py  metaflow.py
dbt_metaflow/cli/: __init__.py  cli.py
tests/: test_cli.py  test_metaflow.py
tests/test_flows/: minimum_flow.py
